@@ -1,6 +1,7 @@
 Version 3.3.1   unreleased
 
     * Make changes to ModuleTabPanelView, ModuleTabView and TabLayoutPanel so replacing tabs works better.
+    * Add new external GWT class CheckboxCell that can be disabled.
 
 Version 3.3.0   27 Nov 2013
 
